# expMan

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: create-release.yml  pypi-publish.yml  release.yml
examples/: live_test.py  test_flow.py  test_run.py
expman/: __init__.py  analysis.py  analyzer.py  cli.py  experiment.py  io.py  server.py  utils.py  web.py
expman/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
expman/frontend/src/: App.vue  main.js  style.css
expman/frontend/src/components/: ArtifactsView.vue  ConfigView.vue  Dashboard.vue  ExperimentList.vue  RunSummaryTable.vue  Sidebar.vue
expman/frontend/src/stores/: experiment.js
expman/static/: index.html  script.js  style.css
expman/static/assets/: main-CdDWZtzX.css
expmanager/: cli.py
expmanager/static/: index.html
